// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rollup > tests/fixtures/ElCard.vue 1`] = `
"// ElCard.js
import { defineComponent, createElementBlock, openBlock, renderSlot } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "ElCard",
	setup(__props) {
		console.log("ElCard");
		return (_ctx, _cache) => {
			return openBlock(), createElementBlock("div", null, [renderSlot(_ctx.$slots, "default")]);
		};
	}
});

const ElCard = _sfc_main;

export { ElCard, ElCard as default };
"
`;

exports[`rollup > tests/fixtures/UPPER-CASE.vue 1`] = `
"// UPPER-CASE.js
import { defineComponent } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "UPPER-CASE",
	setup(__props) {
		console.log("UPPER-CASE");
		return () => {};
	}
});

const UpperCase = _sfc_main;

export { UpperCase, UpperCase as default };
"
`;

exports[`rollup > tests/fixtures/basic.vue 1`] = `
"// basic.js
import { defineComponent, createElementBlock, openBlock, renderSlot } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "basic",
	setup(__props) {
		console.log("basic");
		return (_ctx, _cache) => {
			return openBlock(), createElementBlock("div", null, [renderSlot(_ctx.$slots, "default")]);
		};
	}
});

const Basic = _sfc_main;

export { Basic, Basic as default };
"
`;

exports[`rollup > tests/fixtures/el-button.vue 1`] = `
"// el-button.js
import { defineComponent, createElementBlock, openBlock, renderSlot } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "el-button",
	setup(__props) {
		console.log("el-button");
		return (_ctx, _cache) => {
			return openBlock(), createElementBlock("div", null, [renderSlot(_ctx.$slots, "default")]);
		};
	}
});

const ElButton = _sfc_main;

export { ElButton, ElButton as default };
"
`;

exports[`rollup > tests/fixtures/my_button.vue 1`] = `
"// my_button.js
import { defineComponent, createElementBlock, openBlock, renderSlot } from 'vue';

var _sfc_main = /* @__PURE__ */ defineComponent({
	__name: "my_button",
	setup(__props) {
		console.log("my_button");
		return (_ctx, _cache) => {
			return openBlock(), createElementBlock("div", null, [renderSlot(_ctx.$slots, "default")]);
		};
	}
});

const MyButton = _sfc_main;

export { MyButton, MyButton as default };
"
`;
